complete article function

--- a/statics/index.html
+++ b/statics/index.html
@@ -68,8 +68,9 @@
                 div.className = 'section-item' + (s.id === activeId ? ' active' : '');
                 div.textContent = s.name;
                 div.style.cursor = 'pointer';
+                // 直接跳转到标准 section 路由，避免中间 /hot 导致状态不一致
                 div.addEventListener('click', () => {
-                    location.hash = s.id === 0 ? '/hot' : `/section/${s.id}/page/1`;
+                    location.hash = `/section/${s.id}/page/1`;
                 });
                 box.appendChild(div);
             });
@@ -81,11 +82,11 @@
             const parts = h.split('/').filter(Boolean);
             if (parts[0] === 'hot') return { route: 'list', section: 0, page: 1 };
             if (parts[0] === 'section') {
-                const sid = parseInt(parts[1]) || 1;
-                const pageIndex = parts[2] === 'page' && parseInt(parts[3]) ? parseInt(parts[3]) : 1;
+                const sid = Number.isFinite(Number(parts[1])) ? Number(parts[1]) : 1;
+                const pageIndex = (parts[2] === 'page' && Number.isFinite(Number(parts[3]))) ? Number(parts[3]) : 1;
                 return { route: 'list', section: sid, page: pageIndex };
             }
-            if (parts[0] === 'article') return { route: 'detail', id: parseInt(parts[1]) || 0 };
+            if (parts[0] === 'article') return { route: 'detail', id: Number.isFinite(Number(parts[1])) ? Number(parts[1]) : 0 };
             return { route: 'list', section: 1, page: 1 };
         }
 
@@ -120,7 +121,7 @@
                     card.style.cursor = 'pointer';
                     card.addEventListener('click', () => {
                         try { sessionStorage.setItem('lastListHash', location.hash || `/section/${sectionId}/page/${page}`); } catch (e) {}
-                        location.href = `/articleDetail.html?id=${aid}`;
+                        location.href = `/articleDetail?id=${aid}`;
                     });
 
                     const authorId = a.author || a.Author;
@@ -197,15 +198,29 @@
 
         function onRouteChange() {
             const p = parseHash();
+
+            // 规范化 hot 路由（如果还有 /hot 的历史情况，也统一到 /section/0/page/1）
+            if (p.route === 'list' && p.section === 0 && location.hash !== '#/section/0/page/1') {
+                location.hash = '/section/0/page/1';
+                return;
+            }
+
             if (p.route === 'detail' && p.id) {
                 renderSections(null);
                 document.getElementById('pager').style.display = 'none';
                 return;
             }
-            try { sessionStorage.setItem('lastListHash', location.hash || `/section/${p.section || 1}/page/${p.page || 1}`); } catch (e) {}
-            document.getElementById('pager').style.display = '';
-            const section = p.section || 1;
-            const page = p.page || 1;
+
+            try {
+                sessionStorage.setItem('lastListHash', location.hash || `/section/${(p.section ?? 1)}/page/${(p.page ?? 1)}`);
+            } catch (e) {}
+
+            const section = (p.section ?? 1);
+            const page = (p.page ?? 1);
+
+            // 热门（section === 0）时隐藏分页栏，否则显示
+            document.getElementById('pager').style.display = section === 0 ? 'none' : '';
+
             renderSections(section);
             loadArticles(section, page);
         }
