完成上传游戏和游戏列表

--- a/statics/header.html
+++ b/statics/header.html
@@ -1,9 +1,9 @@
 <header>
-    <div class="logo">论坛示例</div>
+    <div class="logo">FunGo</div>
     <nav>
         <button id="nav-posts">帖子</button>
-        <button id="nav-hot">热门</button>
-        <button id="nav-sections">专区</button>
+        <button id="nav-community">社区</button>
+        <button id="nav-game">游戏中心</button>
     </nav>
     <div id="auth-area">
         <a id="login-link" class="auth-btn" href="/login">登录</a>
