--- a/statics/post.html
+++ b/statics/post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>发布帖子 - 论坛示例</title>
+    <title>发布帖子 - FunGo</title>
     <link rel="stylesheet" href="/common.css" />
 </head>
 <body>
@@ -20,8 +20,8 @@
             <label>所在专区</label>
             <select id="section-select">
                 <!-- 已移除全部分区，保留可发帖的分区 -->
-                <option value="2">技术</option>
-                <option value="3">生活</option>
+                <option value="2">杂谈天地</option>
+                <option value="3">技术分享</option>
             </select>
         </div>
         <div style="margin-top:8px;">
