--- a/statics/header.html
+++ b/statics/header.html
@@ -4,6 +4,8 @@
         <button id="nav-posts">帖子</button>
         <button id="nav-community">社区</button>
         <button id="nav-game">游戏中心</button>
+        <button id="nav-live">直播广场</button>
+
     </nav>
     <div id="auth-area">
         <a id="login-link" class="auth-btn" href="/login">登录</a>
